# ezsys_rt_linux

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.yocto  README  README.md
conf/: layer.conf
inc/: config.h  main.h  ringbuffer.h
recipes-kernel/linux/: linux-raspberrypi_%.bbappend
src/: helper.c  main.c  main.h  ringbuffer.c
